force-app/main/default/objects/Discipline_participation__c/Discipline_participation__c.object-meta.xml
<CustomObject>
    <label>Discipline participation</label>
    <nameField>
        <label>Discipline</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discipline participations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>