force-app/main/default/objects/Discipline_participation__c/fields/Average_rating__c.field-meta.xml
<CustomField>
    <fullName>Average_rating__c</fullName>
    <formula>Total_rating__c / Count_exams__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>