force-app/main/default/objects/Discipline_participation__c/fields/Count_exams__c.field-meta.xml
<CustomField>
    <fullName>Count_exams__c</fullName>
    <label>Count exams</label>
    <summaryForeignKey>Exam__c.Discipline__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>