force-app/main/default/objects/Discipline_participation__c/fields/Maximum_rating__c.field-meta.xml
<CustomField>
    <fullName>Maximum_rating__c</fullName>
    <label>Maximum rating</label>
    <summarizedField>Exam__c.Rating__c</summarizedField>
    <summaryForeignKey>Exam__c.Discipline__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>