force-app/main/default/objects/Discipline_participation__c/fields/Minimal_rating__c.field-meta.xml
<CustomField>
    <fullName>Minimal_rating__c</fullName>
    <label>Minimal rating</label>
    <summarizedField>Exam__c.Rating__c</summarizedField>
    <summaryForeignKey>Exam__c.Discipline__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>