force-app/main/default/objects/Discipline_participation__c/fields/Student_name__c.field-meta.xml
<CustomField>
    <fullName>Student_name__c</fullName>
    <formula>Student__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student name</label>
    <type>Text</type>
</CustomField>