force-app/main/default/objects/Discipline_participation__c/fields/Total_rating__c.field-meta.xml
<CustomField>
    <fullName>Total_rating__c</fullName>
    <label>Total rating</label>
    <summarizedField>Exam__c.Rating__c</summarizedField>
    <summaryForeignKey>Exam__c.Discipline__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>